# lab04

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: example1.cpp
sources/: print.cpp
